[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dustapi"
version = "0.0.1"
authors = [
    { name="Praise G", email="praisegodwins4@gmail.com" },
]
description = "A simple fast web framework"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/godwins3/dustapi"
Issues = "https://github.com/godwins3/dustapi/issues/"
